rapidly losing hope on this thing, it just ignores what i tell it to do but atleast its drawing something now?